// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginated List Pagination renders 1 item on page 7 with page size of 2 and 13 total items 1`] = `
<div>
  <div
    class="gl-flex-row-reverse gl-justify-between sm:gl-flex"
  >
    <gl-search-box-by-type-stub
      clearbuttontitle="Clear"
      value=""
    />
  </div>
  <ul
    class="gl-m-0 gl-grid gl-list-none gl-grid-cols-1 gl-divide-x-0 gl-divide-y gl-divide-solid gl-divide-default gl-p-0"
  >
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: thud
        </span>
      </div>
    </li>
  </ul>
  <gl-pagination-stub
    align="center"
    ellipsistext="…"
    labelfirstpage="Go to first page"
    labellastpage="Go to last page"
    labelnav="Pagination"
    labelnextpage="Go to next page"
    labelpage="Go to page %{page}"
    labelprevpage="Go to previous page"
    limits="[object Object]"
    nexttext="Next"
    perpage="2"
    prevtext="Previous"
    totalitems="13"
    value="7"
  />
</div>
`;

exports[`Paginated List Pagination renders 3 items on page 2 with default page size of 10 and 13 total items 1`] = `
<div>
  <div
    class="gl-flex-row-reverse gl-justify-between sm:gl-flex"
  >
    <gl-search-box-by-type-stub
      clearbuttontitle="Clear"
      value=""
    />
  </div>
  <ul
    class="gl-m-0 gl-grid gl-list-none gl-grid-cols-1 gl-divide-x-0 gl-divide-y gl-divide-solid gl-divide-default gl-p-0"
  >
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: xyzzy
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: plugh
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: thud
        </span>
      </div>
    </li>
  </ul>
  <gl-pagination-stub
    align="center"
    ellipsistext="…"
    labelfirstpage="Go to first page"
    labellastpage="Go to last page"
    labelnav="Pagination"
    labelnextpage="Go to next page"
    labelpage="Go to page %{page}"
    labelprevpage="Go to previous page"
    limits="[object Object]"
    nexttext="Next"
    perpage="10"
    prevtext="Previous"
    totalitems="13"
    value="2"
  />
</div>
`;

exports[`Paginated List Pagination renders 5 items on page 1 for a page size of 5, 13 total itmes and renders pagination 1`] = `
<div>
  <div
    class="gl-flex-row-reverse gl-justify-between sm:gl-flex"
  >
    <gl-search-box-by-type-stub
      clearbuttontitle="Clear"
      value=""
    />
  </div>
  <ul
    class="gl-m-0 gl-grid gl-list-none gl-grid-cols-1 gl-divide-x-0 gl-divide-y gl-divide-solid gl-divide-default gl-p-0"
  >
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: foo
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: bar
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: baz
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: qux
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: quux
        </span>
      </div>
    </li>
  </ul>
  <gl-pagination-stub
    align="center"
    ellipsistext="…"
    labelfirstpage="Go to first page"
    labellastpage="Go to last page"
    labelnav="Pagination"
    labelnextpage="Go to next page"
    labelpage="Go to page %{page}"
    labelprevpage="Go to previous page"
    limits="[object Object]"
    nexttext="Next"
    perpage="5"
    prevtext="Previous"
    totalitems="13"
    value="1"
  />
</div>
`;

exports[`Paginated List Pagination renders 10 items for a default page size of 10, 13 total 1`] = `
<div>
  <div
    class="gl-flex-row-reverse gl-justify-between sm:gl-flex"
  >
    <gl-search-box-by-type-stub
      clearbuttontitle="Clear"
      value=""
    />
  </div>
  <ul
    class="gl-m-0 gl-grid gl-list-none gl-grid-cols-1 gl-divide-x-0 gl-divide-y gl-divide-solid gl-divide-default gl-p-0"
  >
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: foo
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: bar
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: baz
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: qux
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: quux
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: corge
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: grault
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: garply
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: waldo
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: fred
        </span>
      </div>
    </li>
  </ul>
  <gl-pagination-stub
    align="center"
    ellipsistext="…"
    labelfirstpage="Go to first page"
    labellastpage="Go to last page"
    labelnav="Pagination"
    labelnextpage="Go to next page"
    labelpage="Go to page %{page}"
    labelprevpage="Go to previous page"
    limits="[object Object]"
    nexttext="Next"
    perpage="10"
    prevtext="Previous"
    totalitems="13"
    value="1"
  />
</div>
`;

exports[`Paginated List Pagination renders 13 items for a default page size of 20 1`] = `
<div>
  <div
    class="gl-flex-row-reverse gl-justify-between sm:gl-flex"
  >
    <gl-search-box-by-type-stub
      clearbuttontitle="Clear"
      value=""
    />
  </div>
  <ul
    class="gl-m-0 gl-grid gl-list-none gl-grid-cols-1 gl-divide-x-0 gl-divide-y gl-divide-solid gl-divide-default gl-p-0"
  >
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: foo
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: bar
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: baz
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: qux
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: quux
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: corge
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: grault
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: garply
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: waldo
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: fred
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: xyzzy
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: plugh
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: thud
        </span>
      </div>
    </li>
  </ul>
  <gl-pagination-stub
    align="center"
    ellipsistext="…"
    labelfirstpage="Go to first page"
    labellastpage="Go to last page"
    labelnav="Pagination"
    labelnextpage="Go to next page"
    labelpage="Go to page %{page}"
    labelprevpage="Go to previous page"
    limits="[object Object]"
    nexttext="Next"
    perpage="20"
    prevtext="Previous"
    totalitems="13"
    value="1"
  />
</div>
`;

exports[`Paginated List Search states renders the custom empty search message when there are no search results 1`] = `
<div>
  <div
    class="gl-flex-row-reverse gl-justify-between sm:gl-flex"
  >
    <gl-search-box-by-type-stub
      clearbuttontitle="Clear"
      value=""
    />
  </div>
  <ul
    class="gl-m-0 gl-grid gl-list-none gl-grid-cols-1 gl-divide-x-0 gl-divide-y gl-divide-solid gl-divide-default gl-p-0"
  />
  <div
    class="bs-callout bs-callout-warning empty-message gl-mt-5 empty-search"
  >
    Custom empty message
  </div>
</div>
`;

exports[`Paginated List Search states renders the default empty search message when there are no search results 1`] = `
<div>
  <div
    class="gl-flex-row-reverse gl-justify-between sm:gl-flex"
  >
    <gl-search-box-by-type-stub
      clearbuttontitle="Clear"
      value=""
    />
  </div>
  <ul
    class="gl-m-0 gl-grid gl-list-none gl-grid-cols-1 gl-divide-x-0 gl-divide-y gl-divide-solid gl-divide-default gl-p-0"
  />
  <div
    class="bs-callout bs-callout-warning empty-message gl-mt-5 empty-search"
  >
    Sorry, your filter produced no results.
  </div>
</div>
`;

exports[`Paginated List Search states renders the list filtered by search results 1`] = `
<div>
  <div
    class="gl-flex-row-reverse gl-justify-between sm:gl-flex"
  >
    <gl-search-box-by-type-stub
      clearbuttontitle="Clear"
      value=""
    />
  </div>
  <ul
    class="gl-m-0 gl-grid gl-list-none gl-grid-cols-1 gl-divide-x-0 gl-divide-y gl-divide-solid gl-divide-default gl-p-0"
  >
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: bar
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: baz
        </span>
      </div>
    </li>
  </ul>
  <gl-pagination-stub
    align="center"
    ellipsistext="…"
    labelfirstpage="Go to first page"
    labellastpage="Go to last page"
    labelnav="Pagination"
    labelnextpage="Go to next page"
    labelpage="Go to page %{page}"
    labelprevpage="Go to previous page"
    limits="[object Object]"
    nexttext="Next"
    perpage="10"
    prevtext="Previous"
    totalitems="2"
    value="1"
  />
</div>
`;

exports[`Paginated List Searchless states renders the list in an empty state with a custom empty message, when one is provided 1`] = `
<div>
  <div
    class="gl-flex-row-reverse gl-justify-between sm:gl-flex"
  >
    <gl-search-box-by-type-stub
      clearbuttontitle="Clear"
      value=""
    />
  </div>
  <ul
    class="gl-m-0 gl-grid gl-list-none gl-grid-cols-1 gl-divide-x-0 gl-divide-y gl-divide-solid gl-divide-default gl-p-0"
  />
  <div
    class="bs-callout bs-callout-warning empty-message gl-mt-5 empty-message"
  >
    List is passed in empty
  </div>
</div>
`;

exports[`Paginated List Searchless states renders the list in an empty state, when no items are provided 1`] = `
<div>
  <div
    class="gl-flex-row-reverse gl-justify-between sm:gl-flex"
  >
    <gl-search-box-by-type-stub
      clearbuttontitle="Clear"
      value=""
    />
  </div>
  <ul
    class="gl-m-0 gl-grid gl-list-none gl-grid-cols-1 gl-divide-x-0 gl-divide-y gl-divide-solid gl-divide-default gl-p-0"
  />
  <div
    class="bs-callout bs-callout-warning empty-message gl-mt-5 empty-message"
  >
    There are currently no items in this list.
  </div>
</div>
`;

exports[`Paginated List Searchless states renders the list with nested items, when an array of items is provided 1`] = `
<div>
  <div
    class="gl-flex-row-reverse gl-justify-between sm:gl-flex"
  >
    <gl-search-box-by-type-stub
      clearbuttontitle="Clear"
      value=""
    />
  </div>
  <ul
    class="gl-m-0 gl-grid gl-list-none gl-grid-cols-1 gl-divide-x-0 gl-divide-y gl-divide-solid gl-divide-default gl-p-0"
  >
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: foo
        </span>
      </div>
    </li>
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: bar
        </span>
      </div>
    </li>
  </ul>
  <gl-pagination-stub
    align="center"
    ellipsistext="…"
    labelfirstpage="Go to first page"
    labellastpage="Go to last page"
    labelnav="Pagination"
    labelnextpage="Go to next page"
    labelpage="Go to page %{page}"
    labelprevpage="Go to previous page"
    limits="[object Object]"
    nexttext="Next"
    perpage="10"
    prevtext="Previous"
    totalitems="2"
    value="1"
  />
</div>
`;

exports[`Paginated List props filter filters on default "id" key 1`] = `
<div>
  <div
    class="gl-flex-row-reverse gl-justify-between sm:gl-flex"
  >
    <gl-search-box-by-type-stub
      clearbuttontitle="Clear"
      value=""
    />
  </div>
  <ul
    class="gl-m-0 gl-grid gl-list-none gl-grid-cols-1 gl-divide-x-0 gl-divide-y gl-divide-solid gl-divide-default gl-p-0"
  >
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: bar
        </span>
      </div>
    </li>
  </ul>
  <gl-pagination-stub
    align="center"
    ellipsistext="…"
    labelfirstpage="Go to first page"
    labellastpage="Go to last page"
    labelnav="Pagination"
    labelnextpage="Go to next page"
    labelpage="Go to page %{page}"
    labelprevpage="Go to previous page"
    limits="[object Object]"
    nexttext="Next"
    perpage="10"
    prevtext="Previous"
    totalitems="1"
    value="1"
  />
</div>
`;

exports[`Paginated List props filter filters on provided "myKey" key 1`] = `
<div>
  <div
    class="gl-flex-row-reverse gl-justify-between sm:gl-flex"
  >
    <gl-search-box-by-type-stub
      clearbuttontitle="Clear"
      value=""
    />
  </div>
  <ul
    class="gl-m-0 gl-grid gl-list-none gl-grid-cols-1 gl-divide-x-0 gl-divide-y gl-divide-solid gl-divide-default gl-p-0"
  >
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: 
        </span>
      </div>
    </li>
  </ul>
  <gl-pagination-stub
    align="center"
    ellipsistext="…"
    labelfirstpage="Go to first page"
    labellastpage="Go to last page"
    labelnav="Pagination"
    labelnextpage="Go to next page"
    labelpage="Go to page %{page}"
    labelprevpage="Go to previous page"
    limits="[object Object]"
    nexttext="Next"
    perpage="10"
    prevtext="Previous"
    totalitems="1"
    value="1"
  />
</div>
`;

exports[`Paginated List props filter filters with provided filter function 1`] = `
<div>
  <div
    class="gl-flex-row-reverse gl-justify-between sm:gl-flex"
  >
    <gl-search-box-by-type-stub
      clearbuttontitle="Clear"
      value=""
    />
  </div>
  <ul
    class="gl-m-0 gl-grid gl-list-none gl-grid-cols-1 gl-divide-x-0 gl-divide-y gl-divide-solid gl-divide-default gl-p-0"
  >
    <li
      class="gl-px-5 gl-py-4"
    >
      <div
        class="slot"
      >
        <span
          class="item"
        >
          Item Name: bar
        </span>
      </div>
    </li>
  </ul>
  <gl-pagination-stub
    align="center"
    ellipsistext="…"
    labelfirstpage="Go to first page"
    labellastpage="Go to last page"
    labelnav="Pagination"
    labelnextpage="Go to next page"
    labelpage="Go to page %{page}"
    labelprevpage="Go to previous page"
    limits="[object Object]"
    nexttext="Next"
    perpage="10"
    prevtext="Previous"
    totalitems="1"
    value="1"
  />
</div>
`;
